<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/contact_details_description"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/profileLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/header_description"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/contact_details_header_background"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/avatarImageView"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/standard_padding"
                    android:src="@drawable/default_dp_icon" />

            </LinearLayout>

            <TextView
                android:id="@+id/contactName"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vm_branding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:text="@string/email_side_heading" />

            <TextView
                android:id="@+id/emailId"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/job_title_side_heading" />

            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:text="@string/fav_color_side_heading" />

            <TextView
                android:id="@+id/favouriteColor"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>