<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:id="@+id/contactsLinearLayout"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.5"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/buttonContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/contacts_button_description"
        android:background="@color/transparent"
        android:src="@drawable/contacts_icon" />

    <TextView
        android:id="@+id/contactsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/vm_branding"
        android:contentDescription="@string/contacts_button_label_description"
        android:text="@string/contacts_label"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>

<LinearLayout
    android:id="@+id/roomsLinearLayout"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/contactsLinearLayout">

    <ImageButton
        android:id="@+id/buttonRooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/rooms_button_description"
        android:background="@color/transparent"
        android:src="@drawable/office_room_icon" />

    <TextView
        android:id="@+id/roomsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/rooms_label"
        android:contentDescription="@string/rooms_button_label_description"
        android:textColor="@color/vm_branding"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="20dp" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="20dp" />



</androidx.constraintlayout.widget.ConstraintLayout>